Fixed, better utils